skip publish in gateway

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           SBT_OPTS: '-Xmx2G'
-        run: sbt "; sonatypeBundleClean; core/publishSigned; sonatypeBundleRelease"
+        run: sbt "; sonatypeBundleClean; publishSigned; sonatypeBundleRelease"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
